--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,22 @@
-# 数据库地址及数据库名:结尾的?useSSL=false是禁用SSL连接数据库;
-spring.datasource.url=jdbc:mysql://39.108.138.218:3306/android_graduation_design?useSSL=false
+## 数据库地址及数据库名:结尾的?useSSL=false是禁用SSL连接数据库;
+#spring.datasource.url=jdbc:mysql://39.108.138.218:3306/android_graduation_design?useSSL=false
+## 数据库用户
+#spring.datasource.username=root
+## 数据库密码
+#spring.datasource.password=Lznby970315*
+## 数据库驱动类型
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+## 单个文件大小(文件上传大小限制)
+#spring.servlet.multipart.max-file-size = 20Mb
+## 文件总和大小(文件上传大小限制)
+#spring.servlet.multipart.max-request-size = 100Mb
+
+# 这个是本地数据库
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/android_graduation_design?useSSL=false
 # 数据库用户
 spring.datasource.username=root
 # 数据库密码
-spring.datasource.password=Lznby970315*
+spring.datasource.password=abcd2015
 # 数据库驱动类型
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # 单个文件大小(文件上传大小限制)
